[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-04-part1"
path = "src/part1.rs"


[[bin]]
name = "day-04-part2"
path = "src/part2.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = {workspace = true}
